// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> renders error type correctly 1`] = `
.c0 {
  background: var(--color-red-light);
  color: var(--color-red-dark);
  padding: var(--size-smaller);
  text-align: center;
}

<div
  className="c0"
  type="error"
/>
`;

exports[`<Notification /> renders success type correctly 1`] = `
.c0 {
  background: var(--color-green-light);
  color: var(--color-green-dark);
  padding: var(--size-smaller);
  text-align: center;
}

<div
  className="c0"
  type="success"
/>
`;
